more responsive fixes (testing)

--- a/pages/blog/refactoring-to-vue-3.mdx
+++ b/pages/blog/refactoring-to-vue-3.mdx
@@ -2,7 +2,7 @@ export const metadata = { title: "Refactoring to Vue 3" };
 import BlogCodeWalkthroughLayout from "../../components/BlogCodeWalkthroughLayout";
 export default (props) => <BlogCodeWalkthroughLayout {...props} metadata={metadata} />;
 
-# Refactoring to Vue 3
+# Refactoring to Vue&nbsp;3
 
 <div style={{ fontSize: "1.5em" }}>
 
@@ -40,13 +40,15 @@ For example, if we have a Button that retrieves data from the server and updates
 
 <img src="/blog/refactoring-to-vue-3/state-stream.svg" alt="Visual representation of a data stream (described below)" style={{backgroundColor: "#ffffff"}}/>
 
+---
+
 <div style={{ fontSize: "1.5em" }}>
 
 **Stateful logic** is all the logic involved in mutating state.
 
 </div>
 
-In this example, we can call **stateful logic** to the click event handler, the data fetching process, etc.
+In this example, we call **stateful logic** to the click event handler, the data fetching process, etc.
 
 ---
 
