--- a/pages/blog/refactoring-to-vue-3.mdx
+++ b/pages/blog/refactoring-to-vue-3.mdx
@@ -1002,7 +1002,7 @@ We have covered a step by step process of refactoring a Vue component from the *
 The potential of the composition API is huge to make your code more reusable.
 Once you're familiar with this new API, you will see that it's a solid pattern that can scale well, and has even the potential to replace Vuex entirely from your application and become a centralized state management solution. (But that's maybe a topic for another article).
 
-If you're starting with Vue 3, I recommend you to start writing some simple composition functions (or _composables_), and once you're comfortable with them, start writting **all of your stateful logic** this way.
+If you're starting with Vue 3, I recommend you to start writing some simple composition functions (or _composables_), and once you're comfortable with them, start writing **all of your stateful logic** this way.
 
 Good luck, and keep learning ✌️
 
