better code focus experience

--- a/pages/blog/refactoring-to-vue-3.mdx
+++ b/pages/blog/refactoring-to-vue-3.mdx
@@ -342,7 +342,7 @@ To do so, we will replace the `data()` section of our component with our composi
 
 Returning a _ref_ from `setup()` is equivalent as declaring it in `data()`.
 
-```html 12:14,18:24
+```html 9:15,18:24
 <template>
   <div>Window width is: {{ windowWidth }}</div>
 </template>
@@ -503,7 +503,7 @@ Since a method is just a function, to replace our methods we can create a functi
 
 ---
 
-<div style={{ fontSize: "0.7em" }}>
+<div>
 
 Notice how the `windowWidth` _ref_ is mutated by changing it's `value` property.
 
