--- a/pages/blog/refactoring-to-vue-3.mdx
+++ b/pages/blog/refactoring-to-vue-3.mdx
@@ -1,4 +1,4 @@
-export const metadata = { title: "Refactoring to Vue 3" };
+export const metadata = { title: "Refactoring to Vue 3", socialImage: "/blog/refactoring-to-vue-3/social-image.png", description: "Using the composition API to express reusable stateful logic in VueJS" };
 import BlogCodeWalkthroughLayout from "../../components/BlogCodeWalkthroughLayout";
 export default (props) => <BlogCodeWalkthroughLayout {...props} metadata={metadata} />;
 
