automatically crawl posts

--- a/pages/blog/arquitectura-de-la-informacion-en-el-desarrollo-web.mdx
+++ b/pages/blog/arquitectura-de-la-informacion-en-el-desarrollo-web.mdx
@@ -1,7 +1,10 @@
 export const metadata = {
-  title: "Arquitectura de la Información en el Desarrollo Web",
+  title:
+    "Arquitectura de la Información en el Desarrollo Web",
   date: "2018-05-01T13:38:00+02:00",
-  language: "es",
+  lang: "es",
+  description:
+    "La Arquitectura de la Información (IA, por sus siglas en inglés) es una actividad encargada de diseñar cómo las cosas que nos rodean se convierten en información.",
 };
 
 import BlogPostLayout from "../../components/BlogPostLayout";
@@ -96,13 +99,14 @@ En Quora, plataforma de preguntas y respuestas, las preguntas se agrupan en tema
 
 <a
   href="https://www.quora.com/What-are-the-differences-between-folksonomy-and-taxonomy"
-  target="_blank"
+  target="\_blank"
   rel="noreferrer"
 >
+  {" "}
   <img
     src={folksonomyQuora}
     alt="Pregunta en Quora: (traducido del inglés) ¿Cuál es la diferencia entre folksonomía y taxonomía?"
-  />
+  />{" "}
 </a>
 
 Otro ejemplo de folcsonomía es el sistema de "pinneo" de Pinterest, donde es posible clasificar cualquier contenido de la web en distintos tableros.
