--- a/pages/blog/design-thinking.mdx
+++ b/pages/blog/design-thinking.mdx
@@ -2,6 +2,8 @@ export const metadata = {
   title: "Dos métodos del Design Thinking",
   date: "2017-09-08T21:08:26+02:00",
   lang: "es",
+  description:
+    "El Design Thinking se puede entender como una filosofía de diseño o un framework (estructura), que agrupa métodos de diseño y herramientas de investigación en diseño.",
 };
 
 import BlogPostLayout from "../../components/BlogPostLayout";
