--- a/pages/blog/setting-up-visual-studio-code-to-work-with-php.mdx
+++ b/pages/blog/setting-up-visual-studio-code-to-work-with-php.mdx
@@ -1,6 +1,7 @@
 export const metadata = {
   title: "Setting up Visual Studio Code to work with PHP",
   date: "2020-03-31T21:53:19Z",
+  description: "A tutorial for VSCode users",
 };
 
 import BlogPostLayout from "../../components/BlogPostLayout";
